AFS_Dev/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ActualContractSigningDate__c</fullName>
        <label>Actual Contract Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Status_Stage__c</fullName>
        <label>Approved Status/Stage</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Black_Hat_Review_Date__c</fullName>
        <label>Black Hat Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Expected Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Color_Team_Review_Date__c</fullName>
        <label>Color Team Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_Category__c</fullName>
        <label>Complexity Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complexity_Description__c</fullName>
        <label>Complexity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_End__c</fullName>
        <label>Consulting End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Start__c</fullName>
        <label>Consulting Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Management_Review_Date__c</fullName>
        <label>Contract Management Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DraftRFPReleaseDate__c</fullName>
        <label>Draft RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <label>Financial Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_On_Revenue__c</fullName>
        <label>Follow On Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutsourcingEnd__c</fullName>
        <label>Outsourcing End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutsourcingStart__c</fullName>
        <label>Outsourcing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Total_HW_SW__c</fullName>
        <label>Overall Total HW/SW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRG_Review_Date__c</fullName>
        <label>PRG Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTW_Review_Date__c</fullName>
        <label>PTW Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeakCapitalBalance__c</fullName>
        <label>Peak Capital Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Function__c</fullName>
        <label>Primary Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProposalSubmissionDate__c</fullName>
        <label>Proposal Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Assessment_Stage_2B__c</fullName>
        <label>QA Assessment - Stage 2B</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Assessment_Stage_3__c</fullName>
        <label>QA Assessment - Stage 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Risk_Tier_Stage_2B__c</fullName>
        <label>QA Risk Tier - Stage 2B</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Risk_Tier_Stage_3__c</fullName>
        <label>QA Risk Tier - Stage 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFPReleaseDate__c</fullName>
        <label>RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingStatus__c</fullName>
        <label>Reporting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Status_Date__c</fullName>
        <label>Reporting Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Revenue__c</fullName>
        <label>Services Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solution_Baseline_Review_Date__c</fullName>
        <label>Solution Baseline Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1A_Entry_Date__c</fullName>
        <label>Stage 1A Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1B_Entry_Date__c</fullName>
        <label>Stage 1B Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2A_Entry_Date__c</fullName>
        <label>Stage 2A Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2B_Entry_Date__c</fullName>
        <label>Stage 2B Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_3_Entry_Date__c</fullName>
        <label>Stage 3 Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Involvement__c</fullName>
        <label>Subcontractor Involvement %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TCR_OI__c</fullName>
        <label>TCR OI%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TDP_OI__c</fullName>
        <label>TDP OI%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Current_Revenue__c</fullName>
        <label>Total Current Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Potential__c</fullName>
        <label>Total Deal Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_WTD_Revenue__c</fullName>
        <label>Total WTD Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>